# Auto-UAV

./: .gitignore  .gitmodules  README.md  px4_gazebo_sitl.sh
auto_uav/: .gitignore  CMakeLists.txt  package.xml  rviz_plugin.xml
auto_uav/config/: px4_config.yaml
auto_uav/include/auto_uav/: gcsGui.hpp  gcsLogi.hpp  local_planner_nodelet.h  server.hpp  waypoint_generator.h
auto_uav/include/utils/: avoidance_node.h  common.h  planner_functions.h
auto_uav/launch/: bridge_rs_mavros.launch  mavros.launch  px4_real_vehicle.launch  px4_sitl.launch  voxgraph.launch
auto_uav/resource/: gcsGui.ui
auto_uav/rviz/: config_file.rviz
auto_uav/src/: gcsGui.cpp  gcsLogi.cpp  local_planner_nodelet.cpp  server.cpp  server_node.cpp  teleop_keyboard.cpp  waypoint_generator.cpp
auto_uav/src/utils/: avoidance_node.cpp  common.cpp  planner_functions.cpp
auto_uav_msgs/: CMakeLists.txt  package.xml
auto_uav_msgs/srv/: Connect.srv  Land.srv  Takeoff.srv
